@@ -1,3 +1,10 @@
+Sun Mar  2 12:28:40 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* man/man1/man.man1 (OPTIONS): Reorganise into subsections, with
+	  options listed in the same order as in 'man --help' output.
+	* src/man.c (options, parse_opt): Rearrange a few options slightly
+	  so that the ordering makes more sense.
+
 Sun Mar  2 11:56:48 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* man/man1/man.man1, src/encodings.c, src/encodings.h,
